--- a/test.html
+++ b/test.html
@@ -1,1 +1,14 @@
-首页
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    首页
+<h1>master标题</h1>
+    
+</body>
+</html>
